Bug 1593611 - For accounts with OAuth2 authentication, make passwordPromptRequired false since the normal password won't be used. r=mkmelin

Having passwordPromptRequired true for accounts with OAuth2 authentication prevented them from being checked on "Get All New Messages" which do not include accounts which would need to ask for password in the process (and cause many prompts in the process).